# VaelixOS

./: .gitattributes  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  plan.txt  sys.txt
VaelixOS/: README.md
VaelixOS/boot/: vaeboot.rs
VaelixOS/docs/: README.md
VaelixOS/examples/: example_main.rs
VaelixOS/graphics/: vegagx.rs  vxtheme.rs
VaelixOS/logs/: log.txt
VaelixOS/src/: main.rs
VaelixOS/ui/: vxde.rs  vxui_toolkit.rs
boot/vaelix_boot/: Cargo.toml
boot/vaelix_boot/src/: main.rs
config/: config.toml
data/: data.json
drivers/: extract_drivers.sh  extract_firmware.sh
graphics/: vxfont.rs  vxwin.rs
iso/installer/: README.md  installer.sh
iso/system/: README.md
networking/: vxnet_core.rs  vxvpn.rs  vxwall.rs
package/: vxp_installer.rs  vxp_security.rs  vxtoml.rs
scripts/: build.sh  build_full_system_iso.sh  build_installer_iso.sh  test.sh
shims/vaelix-hal/: Cargo.toml
shims/vaelix-hal/src/: audio.rs  bluetooth.rs  cpu.rs  gpu.rs  lib.rs  net.rs  storage.rs
shims/vaelix-hal/src/dma/: controller.rs
shims/vaelix-hal/src/drivers/: cpu_hybrid.rs  gpu_i915.rs  nvme_storage.rs  wifi_rtw89.rs
shims/vaelix-hal/src/power/: policy.rs
shims/vaelix-hal/src/raw/: acpi.rs  dma.rs  driver.rs  firmware.rs  interrupt.rs  mod.rs  pci.rs  perf.rs  runtime_fw.rs
shims/vaelix-hal/src/sched/: hybrid.rs
src/: main.rs
src/boot/: mod.rs  vaeboot.rs
src/graphics/: Cargo.toml  mod.rs  vxfont.rs  vxwin.rs
src/kernel/: Cargo.toml  alloc.rs  collections.rs  fs.rs  io.rs  mod.rs  path.rs  process.rs  sync.rs  time.rs  vaelix_alloc.rs  vx_tasklet.rs  vxboot.rs  vxchan.rs  vxfs.rs  vxshield.rs
src/networking/: Cargo.toml  mod.rs  vxnet_core.rs  vxvpn.rs  vxwall.rs
src/package/: Cargo.toml  mod.rs  vxp_installer.rs  vxp_security.rs  vxtoml.rs
tests/: test_kernel.rs
ui/: vxanim.rs  vxnotification.rs
(+21 files in other folders)
