[package]
name = "vaelixos"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "VaelixOS - A next-generation modular operating system"

[dependencies]
# System dependencies
libc = "0.2"
log = "0.4"
env_logger = "0.10"

# Graphics dependencies
vulkano = "0.33"  # For Vulkan support
winit = "0.28"    # Window creation

# For async operations
tokio = { version = "1.28", features = ["full"] }

# For serialization/deserialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.7"      # For parsing vx.toml files

[dev-dependencies]
criterion = "0.4"  # For benchmarking
mockall = "0.11"   # For mocking in tests

[[bin]]
name = "vaelixos"
path = "src/main.rs"
