[package]
name = "vaelix_boot"
version = "0.1.0"
edition = "2021"
description = "Custom bootloader for VaelixOS"
authors = ["VaelixOS Team"]

[dependencies]
bootloader = { version = "0.11", features = ["bios", "uefi"] }
x86_64 = { version = "0.15.2", features = ["abi_x86_interrupt"] }
uefi = { version = "0.34.1", features = ["log-debugcon"] }

[profile.release]
panic = "abort"     # Disable stack unwinding on panic
lto = true         # Enable link-time optimization
codegen-units = 1  # Better optimization, slower compile
